--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/viewSupplier.jsp=UTF-8
 encoding//WebContent/addProduct.jsp=UTF-8
 encoding//WebContent/index.jsp=UTF-8
 encoding//WebContent/viewProduct.jsp=UTF-8
